--- a/Corporate_Handcuffs/index.html
+++ b/Corporate_Handcuffs/index.html
@@ -11,11 +11,11 @@
     </audio>
     <iframe src="sounds/silence.mp3" allow="autoplay" style="display:none" id="iframeAudio">
     </iframe>
-    <h1>New Path Industries</h1>
-    <p>Here at New Path we help get you on a path to a bright future. In today's modern world it is easy to find yourself, in some sense, led astray. We have helped almost 7 billion people like yourself. They are now happily employed, living a calm and comfortable life.
+    <h1 id="change1">New Path Industries</h1>
+    <p id="change2">Here at New Path we help get you on a path to a bright future. In today's modern world it is easy to find yourself, in some sense, led astray. We have helped almost 7 billion people like yourself. They are now happily employed, living a calm and comfortable life.</p>
     <br>
     <br>
-    Have you been struggling finding a source of income? Always feel like your fighting your demons to become a better you? Stuck in an endless cycle of self-destruction? Sick of managing every single tedious detail of your life? Wish there was someone who can handle all these tiresome details for you?
+    <p id="change3">Have you been struggling to find a source of income? Always feel like your fighting your demons to become a better you? Stuck in an endless cycle of self-destruction? Sick of managing every single tedious detail of your life? Wish there was someone who can handle all these tiresome details for you?
     <br>
     <br>
     You are not alone. We can help. Submit this application and contract to find yourself a new path at New Path Industries.</p>
@@ -44,7 +44,7 @@
       Are you Conforming or Rebelious:<br>
       <input type="text" name="temperment2"><br>
     </form>
-    <p>By submitting this form you both, acknowledge that all this information is correct, and agree to following terms and conditions.</p>
+    <p id="change4">By submitting this form you both, acknowledge that all this information is correct, and agree to following terms and conditions.</p>
     <p id="contract">This submit button is legally binding. By pressing it you automatically accept the position of New Path Agent for a term of 100 years. You agree to relocate to a New Path housing facility with your family. You agree to serve New Path and their agenda. You agree to use only New Path health insurance and retirement plans. You agree to serve your term for the full amount of years or until you are no longer able to do so. If these terms and conditions are not acceptible to you please do not press the submit button. Once you do you are legally binded to the terms and conditions stipulated within this paragraph. Looking forward to getting you on your new path.</p>
     <br>
     <br>
