--- a/better-clock-V-0-0/index.html
+++ b/better-clock-V-0-0/index.html
@@ -3,19 +3,12 @@
 <head>
     <title>Digital Clock</title>
     <meta charset="utf-8">
-
-    <!-- stylesheet added in step 6 -->
     <link href="style.css" media="screen" rel="stylesheet" type="text/css"/>
-
-    <!-- this is a link to the Microsoft CDN of jQuery below -->
-     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
-
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
     <div id='clock'></div>
-
-
     <script src="main.js"></script>
 </body>
 
