--- a/better-clock-V-0-0/index.html
+++ b/better-clock-V-0-0/index.html
@@ -2,13 +2,18 @@
 <html>
 <head>
     <title>Digital Clock</title>
-    <meta charset="utf-8">
+    <meta name="veiwport" charset="utf-8">
     <link href="style.css" media="screen" rel="stylesheet" type="text/css"/>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
-    <div id='clock'></div>
+
+      <div id="clockny" class="flex-container">1</div>
+      <div id="clockla" class="flex-container">2</div>
+      <div id="clocktelaviv" class="flex-container">3</div>
+      <div id="clockrio" class="flex-container">4</div>
+
     <script src="main.js"></script>
 </body>
 
