--- a/better-clock-V-0-0/index.html
+++ b/better-clock-V-0-0/index.html
@@ -8,11 +8,13 @@
 </head>
 
 <body>
+    <div class="flex-container">
+      <div id="clockny">1</div>
+      <div id="clockla">2</div>
+      <div id="clocktelaviv">3</div>
+      <div id="clockrio">4</div>
+    </div>
 
-      <div id="clockny" class="flex-container">1</div>
-      <div id="clockla" class="flex-container">2</div>
-      <div id="clocktelaviv" class="flex-container">3</div>
-      <div id="clockrio" class="flex-container">4</div>
 
     <script src="main.js"></script>
 </body>
